src/objects/AddressTypeBean__mdt.object
<CustomObject>
    <fields>
        <fullName>AddressLine1FormatString__c</fullName>
        <label>AddressLine1FormatString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2FormatString__c</fullName>
        <label>AddressLine2FormatString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3FormatString__c</fullName>
        <label>AddressLine3FormatString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressTypeId__c</fullName>
        <label>AddressTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCityRequired__c</fullName>
        <label>IsCityRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCsrEnterable__c</fullName>
        <label>IsCsrEnterable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFreeform__c</fullName>
        <label>IsFreeform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFxgeocodeRequired__c</fullName>
        <label>IsFxgeocodeRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsHousenumberRequired__c</fullName>
        <label>IsHousenumberRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPostalcodeRequired__c</fullName>
        <label>IsPostalcodeRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsServiceable__c</fullName>
        <label>IsServiceable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsStateRequired__c</fullName>
        <label>IsStateRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsStreetnameRequired__c</fullName>
        <label>IsStreetnameRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AddressTypeBean</label>
    <pluralLabel>AddressTypeBean</pluralLabel>
</CustomObject>